@@ -28,6 +28,7 @@
 
 package org.opennms.horizon.inventory.grpc;
 
+import com.google.protobuf.BoolValue;
 import com.google.protobuf.Empty;
 import com.google.protobuf.Int64Value;
 import com.google.protobuf.StringValue;
@@ -43,16 +44,18 @@ import org.opennms.horizon.inventory.dto.MonitoringLocationDTO;
 import org.opennms.horizon.inventory.dto.MonitoringLocationList;
 import org.opennms.horizon.inventory.dto.MonitoringLocationServiceGrpc;
 import org.opennms.horizon.inventory.service.MonitoringLocationService;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Component
 @RequiredArgsConstructor
 public class MonitoringLocationGrpcService extends MonitoringLocationServiceGrpc.MonitoringLocationServiceImplBase {
+    private static final Logger LOG = LoggerFactory.getLogger(MonitoringLocationGrpcService.class);
     private final MonitoringLocationService service;
     private final TenantLookup tenantLookup;
 
@@ -99,7 +102,7 @@ public class MonitoringLocationGrpcService extends MonitoringLocationServiceGrpc
 
     @Override
     public void listLocationsByIds(IdList request, StreamObserver<MonitoringLocationList> responseObserver) {
-        List<Long> idList = request.getIdsList().stream().map(Int64Value::getValue).collect(Collectors.toList());
+        List<Long> idList = request.getIdsList().stream().map(Int64Value::getValue).toList();
         responseObserver.onNext(MonitoringLocationList.newBuilder().addAllLocations(service.findByLocationIds(idList)).build());
         responseObserver.onCompleted();
     }
@@ -110,6 +113,58 @@ public class MonitoringLocationGrpcService extends MonitoringLocationServiceGrpc
             .map(tenantId -> service.searchLocationsByTenantId(request.getValue(), tenantId)).orElseThrow();
         responseObserver.onNext(MonitoringLocationList.newBuilder().addAllLocations(locations).build());
         responseObserver.onCompleted();
+    }
+
+    @Override
+    public void createLocation(MonitoringLocationDTO request, StreamObserver<MonitoringLocationDTO> responseObserver) {
+        tenantLookup.lookupTenantId(Context.current())
+            .ifPresent(tenantId -> {
+                try {
+                    responseObserver.onNext(service.upsert(MonitoringLocationDTO.newBuilder(request).setTenantId(tenantId).build()));
+                    responseObserver.onCompleted();
+                } catch (Exception e) {
+                    LOG.error("Error while creating location with name {}", request.getLocation(), e);
+                    Status status = Status.newBuilder()
+                        .setCode(Code.INTERNAL_VALUE)
+                        .setMessage("Error while creating location with name " + request.getLocation()).build();
+                    responseObserver.onError(StatusProto.toStatusRuntimeException(status));
+                }
+            });
+    }
+
+    @Override
+    public void updateLocation(MonitoringLocationDTO request, StreamObserver<MonitoringLocationDTO> responseObserver) {
+        tenantLookup.lookupTenantId(Context.current())
+            .ifPresent(tenantId -> {
+                try {
+                    responseObserver.onNext(service.upsert(MonitoringLocationDTO.newBuilder(request).setTenantId(tenantId).build()));
+                    responseObserver.onCompleted();
+                } catch (Exception e) {
+                    LOG.error("Error while updating location with ID {}", request.getId(), e);
+                    Status status = Status.newBuilder()
+                        .setCode(Code.INTERNAL_VALUE)
+                        .setMessage("Error while updating location with ID " + request.getId()).build();
+                    responseObserver.onError(StatusProto.toStatusRuntimeException(status));
+                }
+            });
+    }
+
+    @Override
+    public void deleteLocation(Int64Value request, StreamObserver<BoolValue> responseObserver) {
+        tenantLookup.lookupTenantId(Context.current())
+            .ifPresent(tenantId -> {
+                try {
+                    service.delete(request.getValue(), tenantId);
+                    responseObserver.onNext(BoolValue.of(true));
+                    responseObserver.onCompleted();
+                } catch (Exception e) {
+                    LOG.error("Error while deleting location with ID {}", request.getValue(), e);
+                    Status status = Status.newBuilder()
+                        .setCode(Code.INTERNAL_VALUE)
+                        .setMessage("Error while deleting location with ID " + request.getValue()).build();
+                    responseObserver.onError(StatusProto.toStatusRuntimeException(status));
+                }
+            });
     }
 }
 
